# Alembic-Viewer

./: .gitignore  AlembicViewer.spec  Makefile  README.md  alembic_viewer.py  pyproject.toml
.github/workflows/: build.yml
alembic_viewer/: __init__.py  __main__.py  app.py  canvas.py  config.py  dialogs.py  models.py  parser.py
hooks/: hook-babel.py
tests/: __init__.py  test_migrations.py
