[project]
name = "alembic-viewer"
version = "1.0.0"
description = "Desktop application to visualize Alembic migration graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fernando"}
]
keywords = ["alembic", "migrations", "visualization", "gui", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control",
]

dependencies = [
    "tkcalendar>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
alembic-viewer = "alembic_viewer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alembic_viewer"]

# ============================================================================
# UV Configuration
# ============================================================================
[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "F841",   # local variable assigned but never used (sometimes intentional)
    "B007",   # loop control variable not used (sometimes intentional for clarity)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================================================
# Pyright Configuration
# ============================================================================
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
